# mongodb-connector-pkg

./: .gitignore  README.md  README.rst  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  template.py  tox.ini
.github/workflows/: ci.yaml  python-publish.yaml
experiments/: experiments.ipynb
src/database_automation/: mongo_crud.py
src/mdb_connect_pkg/: mongo_crud.py
src/mongodb_connect/: mongo_crud.py
