[metadata]
name = mongodbconnect
version = 0.0.1
author = yuvaneshkm
author_email = yuvaneshkm05@gmail.com
license = MIT
license_file = LICENSE
description = Python package for connecting MongoDB Database
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yuvaneshkm/mongodb-connector-pkg
classifiers = 
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.10
install_requires = 
    ensure==1.0.2
    pandas
    numpy

[options.extras_require]
testing = 
    pytest>=7.1.3
    mypy>=0.971
    flake8>=5.0.4
    tox>=3.25.1
    black>=22.8.0

[options.package_data]
MongoDB-Connect = py.typed

[flake8]
max-line-length = 160
exclude = __init__.py, .git, __pycache__, 