[metadata]
license = MIT
license_file = LICENSE
classifiers = 
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent

[options.package_data]
MongoDB-Connect=py.typed

[flake8]
max-line-length = 160
exclude = __init__.py